firefly: fix attributes flickering in firefox

--- a/Firefly/firefly.css
+++ b/Firefly/firefly.css
@@ -462,20 +462,25 @@ fieldset[disabled] .sheet-page .sheet-section button[type=roll].active {
 .sheet-attributes {
   width: 100%;
   height: 35px;
-  margin-left: 25%;
+  margin-left: 18%;
 }
 .sheet-attributes .sheet-attribute {
   display: inline-block;
   clear: both;
+  width: 18%;
+  margin-left: 0px;
+  margin-right: 30px;
 }
 .sheet-attributes .sheet-attribute > div {
   float: left;
   vertical-align: middle;
+  margin: 0;
 }
 .sheet-attributes .sheet-attribute > button {
   float: right;
   display: inline-block;
   height: 35px;
+  margin: 0px;
 }
 /* Section: Skills */
 .sheet-skills table {
