--- a/Firefly/styles.less
+++ b/Firefly/styles.less
@@ -145,18 +145,23 @@
 .sheet-attributes{
     width: 100%;
     height: 35px;
-    margin-left: 25%;
+    margin-left: 18%;
     .sheet-attribute {
         display:inline-block;
         clear: both;
+        width: 18%;
+        margin-left: 0px;
+        margin-right: 30px;
         & > div {
             float: left;
             vertical-align: middle;
+            margin: 0;
         }
         & > button {
             float: right;
             display: inline-block;
             height: 35px;
+            margin: 0px;
         }
     }
 }
